--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,27 @@
 .App {
   text-align: center;
 }
-
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+p{
+  font-size: 1.5rem;
+  font-weight: 400;
+  line-height: 1.4;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
 button {
-  font-size: calc(10px + 2vmin);
+  font-size: calc(14px + 2vmin);
+  min-width: 100px;
+  font-weight: 500;
+  padding: .5rem 1rem;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  transition: transform .1s ease-in-out, box-shadow .2s ease-in-out;
+  background-color: #1d9bf0;
+  color: black;
+  box-shadow: -5px -5px 4px 0px #1d9cf0b0;
+  border: 1px solid #1d9cf0cc;
+}
+
+button:hover {
+  transform: translateY(-2px);
+  box-shadow: 0px 0px 0px 0px #1d9cf04d;
 }
